--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.3",
+    "glob": "^7.1.6",
     "sirv-cli": "^1.0.0",
     "sveltestrap": "^3.10.0"
   }
